--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "expo": "~54.0.20",
     "expo-build-properties": "~1.0.9",
     "expo-constants": "~18.0.10",
+    "expo-device": "~8.0.9",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
     "expo-linking": "~8.0.8",
+    "expo-notifications": "~0.32.12",
     "expo-router": "~6.0.13",
     "expo-splash-screen": "~31.0.10",
     "expo-sqlite": "^16.0.9-canary-20251023-4c86f95",
@@ -38,11 +40,11 @@
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-google-mobile-ads": "^16.0.0",
-    "react-native-reanimated": "~4.1.1",
+    "react-native-reanimated": "^4.1.3",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1",
+    "react-native-worklets": "^0.6.1",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
