--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
-    "@shopify/flash-list": "^2.2.0",
-    "@shopify/react-native-skia": "^2.3.8",
+    "@shopify/flash-list": "2.0.2",
+    "@shopify/react-native-skia": "2.2.12",
     "babel-plugin-inline-import": "^3.0.0",
     "drizzle-orm": "^0.44.7",
-    "expo": "~54.0.20",
+    "expo": "54.0.23",
     "expo-build-properties": "~1.0.9",
     "expo-constants": "~18.0.10",
+    "expo-crypto": "~15.0.7",
     "expo-device": "~8.0.9",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
@@ -30,11 +31,12 @@
     "expo-notifications": "~0.32.12",
     "expo-router": "~6.0.13",
     "expo-splash-screen": "~31.0.10",
-    "expo-sqlite": "^16.0.9-canary-20251023-4c86f95",
+    "expo-sqlite": "~16.0.9",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.8",
     "expo-web-browser": "~15.0.9",
+    "nanoid": "^5.1.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
@@ -44,7 +46,7 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "^0.6.1",
+    "react-native-worklets": "0.5.1",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
