--- a/package.json
+++ b/package.json
@@ -11,26 +11,32 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~6.1.2",
     "@expo/vector-icons": "^15.0.3",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "@shopify/flash-list": "2.0.2",
     "@shopify/react-native-skia": "2.2.12",
+    "@types/d3": "^7.4.3",
+    "ably": "^2.14.0",
     "babel-plugin-inline-import": "^3.0.0",
+    "d3": "^7.9.0",
     "drizzle-orm": "^0.44.7",
-    "expo": "54.0.23",
+    "expo": "~54.0.24",
+    "expo-background-task": "~1.0.9",
     "expo-build-properties": "~1.0.9",
+    "expo-clipboard": "~8.0.7",
     "expo-constants": "~18.0.10",
     "expo-crypto": "~15.0.7",
     "expo-device": "~8.0.9",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
-    "expo-linking": "~8.0.8",
-    "expo-notifications": "~0.32.12",
-    "expo-router": "~6.0.13",
-    "expo-splash-screen": "~31.0.10",
+    "expo-linking": "~8.0.9",
+    "expo-notifications": "~0.32.13",
+    "expo-router": "~6.0.15",
+    "expo-splash-screen": "~31.0.11",
     "expo-sqlite": "~16.0.9",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
@@ -43,9 +49,10 @@
     "react-native-gesture-handler": "~2.28.0",
     "react-native-google-mobile-ads": "^16.0.0",
     "react-native-reanimated": "^4.1.3",
+    "react-native-redash": "^18.1.4",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-web": "~0.21.0",
+    "react-native-web": "^0.21.0",
     "react-native-worklets": "0.5.1",
     "zustand": "^5.0.8"
   },
