--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "snap",
   "main": "expo-router/entry",
-  "version": "1.0.0",
+  "version": "0.0.14",
   "scripts": {
+    "test": "unset JAVA_OPTS && maestro test .maestro/test.ios.yml",
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
@@ -46,6 +47,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-google-mobile-ads": "^16.0.0",
     "react-native-reanimated": "^4.1.3",
